Refactored command history to its own class